resources/cp5/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service # 엔드포인트의 오브젝트이름은 서비스의 이름과 일치해야 한다.
subsets:
- addresses:
    - ip: 11.11.11.11
    - ip: 22.22.22.22
      # 서비스가 연결을 전달할 엔드포인트의 IP
  ports:
    - port: 80 # 엔드포인트 대상포트
