resources/cp5/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName # 서비스 유형 설정
  externalName: someapi.somecompany.com # 실제 서비스의 정규화된 도메인 이름
  ports:
    - port: 80
