resources/cp5/kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer #로드밸런스 유형은 호스팅하는 인프라에서 제공한다.
  ports:
    - port: 80
      targetPort: 8080
  selector:
      app: kubia
