resources/cp5/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort # 서비스 유형 노트포트로 설정
  ports:
    - port: 80 # 서비스 내부 클러스터 IP의 포트
      targetPort: 8080 # 서비스 대상 파드의 포트
      nodePort: 30123 # 각 클러스터 노드의 포트 30123으로 서비스에 엑세스할수있다.
  selector:
      app: kubi
