resources/cp5/kubia-ingress-multi-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - hots: foo.example.com
      http:
      paths:
        - path: /
          backend:
            serviceName: foo
            servicePort: 80
    - hots: bar.example.com
      http:
      paths:
        - path: /
          backend:
            serviceName: bar
            servicePort: 80
