resources/cp5/kubia-ingress-multi-port.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - hots: kubia.example.com
      http:
      paths:
        - path: /kubia
          backend:
            serviceName: kubia
            servicePort: 80
        - path: /bar
          backend:
            serviceName: bar
            servicePort: 80
