resources/cp5/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - hots: kubia.example.com
      http:
      paths:
        - path: /
          backend:
            serviceName: kubia-nodeport
            servicePort: 80
